# fast-gspan

./: .gitattributes  .gitignore  Dockerfile  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fast_gspan/: __init__.py  __main__.py  gbolt_wrapper.py
tests/: test_wrapper.py
